task3/manifests/peer-auth.yaml
# Enforce mTLS STRICT
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: ledger
spec:
  mtls:
    mode: STRICT
